--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,4 +15,25 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+
+      - name: check info
+        run: |
+              cat cat /proc/cpuinfo
+              if [ -f /.dockerenv ]; then
+                echo "I'm inside matrix ;(";
+              else
+                echo "I'm living in real world!";
+              fi
+
+      - name: build gem5
+        run: |
+          #     echo "nothing happens here"
+              scons build/ALL/gem5.opt -j 24
+          #     # scons build/ALL/gem5.fast -j4 --no-compress-debug --ignore-style
+      - name: run x86 tests without initial build
+        run: |
+              cd tests
+              ./main.py run gem5/x86-boot-tests -j24
+          #     # ./main.py run -j4 -t4 gem5 -vv && scons -C .. --no-compress-debug --ignore-style build/ARM/unittests.opt
+          # gcr.io/gem5-test/ubuntu-20.04_all-dependencies:v22-0
       - run: echo "🍏 This job's status is ${{ job.status }}."
