--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,6 +5,7 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: [self-hosted, linux, x64]
     steps:
+      - uses: actions/checkout@v3
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} events."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
@@ -24,6 +25,37 @@ jobs:
               else
                 echo "I'm living in real world!";
               fi
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest
+          python -m pip install scons
+          unset PYTHONPATH
+          unset PYTHONHOME
+          # export PYTHONPATH='/home/mkjost/.local/lib/python3.8/site-packages'
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v19
+
+      - name: Install black and reorder-python-imports
+        run: pip install black reorder-python-imports
+
+      - name: Black and Sort changed files
+        run: |
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            echo $file
+            if [[ $file == *.py ]]; then
+              black $file --check
+              reorder-python-imports $file
+            fi
+          done
 
       - name: build gem5
         run: |
