--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,8 +27,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest
           python -m pip install scons
-          # pip install python-config
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
+          pip install python-config
+          # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Get changed files
         id: changed-files
