--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,8 +48,8 @@ jobs:
             fi
           done
 
-      # - name: build gem5
-      #   run: scons build/ALL/gem5.opt -j 24 PYTHON_CONFIG=/usr/bin/python3-config 
+      - name: build gem5
+        run: python3 $(which scons) build/ALL/gem5.opt -j 24 PYTHON_CONFIG=/usr/bin/python3-config 
       - name: run x86 tests wit initial build
         run: |
               cd tests
