--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,7 +32,8 @@ jobs:
           python -m pip install scons
           pip install -r requirements.txt
           pip install python-config
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi 
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          apt install zlib1g zlib1g-dev
 
       - name: Get changed files
         id: changed-files
