--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -52,6 +52,17 @@ jobs:
             fi
           done
 
+      - name: Run the build process with Docker
+        uses: addnab/docker-run-action@v3
+        with:
+          image: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
+          # options: -v ${{ github.workspace }}:/var/www
+          run: |
+            echo "entered here"
+            scons build/ALL/gem5.opt -j 24
+            cd tests
+            ./main.py run gem5/x86-boot-tests -j24 --skip-build
+
       - name: build gem5
         run: python3 $(which scons) build/ALL/gem5.opt -j 24 PYTHON_CONFIG=/usr/bin/python3-config 
       - name: run x86 tests wit initial build
