--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -59,9 +59,9 @@ jobs:
           # options: -v ${{ github.workspace }}:/var/www
           run: |
             echo "entered here"
-            scons build/ALL/gem5.opt -j 24
-            cd tests
-            ./main.py run gem5/x86-boot-tests -j24 --skip-build
+            scons build/ALL/gem5.opt
+            # cd tests
+            # ./main.py run gem5/x86-boot-tests -j24 --skip-build
 
       - name: build gem5
         run: python3 $(which scons) build/ALL/gem5.opt -j 24 PYTHON_CONFIG=/usr/bin/python3-config 
