--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,9 +37,9 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           # apt-get install zlib1g-dev
 
-      # - name: Get changed files
-      #   id: changed-files
-      #   uses: tj-actions/changed-files@v19
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v19
 
       - name: Install black and reorder-python-imports
         run: pip install black reorder-python-imports
