--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,6 +26,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: list number of threads
+        run: |
+          cat /proc/cpuinfo
+          id
 
       - name: Install dependencies
         run: |
@@ -44,15 +48,15 @@ jobs:
       - name: Install black and reorder-python-imports
         run: pip install black reorder-python-imports
 
-      # - name: Black and Sort changed files
-      #   run: |
-      #     for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-      #       echo $file
-      #       if [[ $file == *.py ]]; then
-      #         black $file --check
-      #         reorder-python-imports $file
-      #       fi
-      #     done
+      - name: Black and Sort changed files
+        run: |
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            echo $file
+            if [[ $file == *.py ]]; then
+              black $file --check
+              reorder-python-imports $file
+            fi
+          done
 
       # - name: Run the build process with Docker
       #   uses: addnab/docker-run-action@v3
