--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,6 +10,8 @@ jobs:
         python-version: [3.8]
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} events."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
@@ -26,10 +28,6 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: list number of threads
-        run: |
-          cat /proc/cpuinfo
-          id
 
       - name: Install dependencies
         run: |
@@ -43,7 +41,7 @@ jobs:
 
       # - name: Get changed files
       #   id: changed-files
-      #   uses: tj-actions/changed-files@v19
+      #   uses: tj-actions/changed-files@v35
 
       - name: Install black and reorder-python-imports
         run: pip install black reorder-python-imports
