--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -75,5 +75,5 @@ jobs:
       - name: run x86 tests wit initial build
         run: |
               cd tests
-              ./main.py run gem5/memory -vvv --skip-build
+              ./main.py run gem5/memory -vvv --skip-build --length=long
       - run: echo "🍏 This job's status is ${{ job.status }}."
