--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -70,9 +70,9 @@ jobs:
       #       # cd tests
       #       # ./main.py run gem5/x86-boot-tests -j24 --skip-build
 
-      - name: build gem5
-        run: scons build/ALL/gem5.opt -j $(nproc)
-      - name: run normal x86 tests do not skip build
+      # - name: build gem5
+      #   run: scons build/ALL/gem5.opt -j $(nproc)
+      - name: run normal x86 tests skip build
         run: |
               cd tests
               ./main.py run gem5/x86-boot-tests
