--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,10 +36,11 @@ jobs:
           python -m pip install scons
           pip install -r requirements.txt
           pip install python-config
-          scons build/X86/gem5.opt -j $(nproc)
-          build/X86/gem5.opt -re tests/gem5/configs/x86_boot_exit_run.py --cpu o3 --num-cpus 2 --mem-system mesi_two_level --dram-class DualChannelDDR4_2400 --boot-type init --resource-directory tests/gem5/resources --tick-exit 100000000
-          cd tests
-          ./main.py run gem5/x86-boot-tests
+          python --version
+          # scons build/X86/gem5.opt -j $(nproc)
+          # build/X86/gem5.opt -re tests/gem5/configs/x86_boot_exit_run.py --cpu o3 --num-cpus 2 --mem-system mesi_two_level --dram-class DualChannelDDR4_2400 --boot-type init --resource-directory tests/gem5/resources --tick-exit 100000000
+          # cd tests
+          # ./main.py run gem5/x86-boot-tests
 
 
       # - name: Get changed files
