--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,7 +39,7 @@ jobs:
           python --version
           python3 test.py
           scons build/NULL/gem5.opt -j $(nproc)
-          build/NULL/gem5.opt --help
+          # build/NULL/gem5.opt --help
           ldd build/NULL/gem5.opt
           # build/X86/gem5.opt -re tests/gem5/configs/x86_boot_exit_run.py --cpu o3 --num-cpus 2 --mem-system mesi_two_level --dram-class DualChannelDDR4_2400 --boot-type init --resource-directory tests/gem5/resources --tick-exit 100000000
           # cd tests
