--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,9 +5,6 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: [self-hosted, linux, x64]
     container: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
-    strategy:
-      matrix:
-        python-version: [3.8]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -24,10 +21,10 @@ jobs:
           # ls ${{ github.workspace }}
           ls
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.8
 
       - name: Install dependencies
         run: |
@@ -39,8 +36,8 @@ jobs:
           python --version
           python3 test.py
           scons build/NULL/gem5.opt -j $(nproc)
-          # build/NULL/gem5.opt --help
-          ldd build/NULL/gem5.opt
+          build/NULL/gem5.opt --help
+          # ldd build/NULL/gem5.opt
           # build/X86/gem5.opt -re tests/gem5/configs/x86_boot_exit_run.py --cpu o3 --num-cpus 2 --mem-system mesi_two_level --dram-class DualChannelDDR4_2400 --boot-type init --resource-directory tests/gem5/resources --tick-exit 100000000
           # cd tests
           # ./main.py run gem5/x86-boot-tests
