--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,20 +21,20 @@ jobs:
           # ls ${{ github.workspace }}
           ls
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.8
+      # - name: Set up Python
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: 3.8
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          python -m pip install scons
-          pip install -r requirements.txt
-          pip install python-config
-          python --version
-          python3 test.py
+          # python -m pip install --upgrade pip
+          # pip install flake8 pytest
+          # python -m pip install scons
+          # pip install -r requirements.txt
+          # pip install python-config
+          # python --version
+          # python3 test.py
           scons build/NULL/gem5.opt -j $(nproc)
           build/NULL/gem5.opt --help
           # ldd build/NULL/gem5.opt
