--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,85 +1,28 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: GitHub Actions gem5 Test Run
+run-name: Using NULL ISA to run --help
 on: [push]
 jobs:
   Explore-GitHub-Actions:
     runs-on: [self-hosted, linux, x64]
+    # running container with only a single arguement passes the image being used
     container: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
+
     steps:
+    # checks out repository, should be more useful when
+    # running checks on changed files
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} events."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          # ls ${{ github.workspace }}
-          ls
 
-      # - name: Set up Python
-      #   uses: actions/setup-python@v4
-      #   with:
-      #     python-version: 3.8
-
-      - name: Install dependencies
+      - name: Build and run gem5
         run: |
-          # python -m pip install --upgrade pip
-          # pip install flake8 pytest
-          # python -m pip install scons
-          # pip install -r requirements.txt
-          # pip install python-config
-          # python --version
-          # python3 test.py
           scons build/NULL/gem5.opt -j $(nproc)
           build/NULL/gem5.opt --help
           # ldd build/NULL/gem5.opt
-          # build/X86/gem5.opt -re tests/gem5/configs/x86_boot_exit_run.py --cpu o3 --num-cpus 2 --mem-system mesi_two_level --dram-class DualChannelDDR4_2400 --boot-type init --resource-directory tests/gem5/resources --tick-exit 100000000
-          # cd tests
-          # ./main.py run gem5/x86-boot-tests
 
+      # double checking that steps are run chronologically
+      - name: Run gem5 separately (memory_traffic.py)
+        run: |
+          build/NULL/gem5.opt configs/examples/gem5_library/memory_traffic.py LinearGenerator 100
 
-      # - name: Get changed files
-      #   id: changed-files
-      #   uses: tj-actions/changed-files@v35
-
-      # - name: Install black and reorder-python-imports
-      #   run: pip install black reorder-python-imports
-
-      # - name: Black and Sort changed files
-      #   run: |
-      #     for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-      #       echo $file
-      #       if [[ $file == *.py ]]; then
-      #         black $file --check
-      #         reorder-python-imports $file
-      #       fi
-      #     done
-
-      # - name: Run the build process with Docker
-      #   uses: addnab/docker-run-action@v3
-      #   with:
-      #     image: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
-      #     # options: -v ${{ github.workspace }}:/var/www
-      #     run: |
-      #       echo "entered here"
-      #       ls
-      #       python -m pip install scons
-      #       pip install -r requirements.txt
-      #       scons build/ALL/gem5.opt
-      #       # cd tests
-      #       # ./main.py run gem5/x86-boot-tests -j24 --skip-build
-
-      # - name: build gem5
-      #   run: scons build/ALL/gem5.opt -j $(nproc)
-      # - name: run normal x86 tests skip build
-      #   run: |
-      #        pip install -r requirements.txt
-      #        build/ALL/gem5.opt -re tests/gem5/configs/x86_boot_exit_run.py --cpu o3 --num-cpus 2 --mem-system mesi_two_level --dram-class DualChannelDDR4_2400 --boot-type init --resource-directory tests/gem5/resources --tick-exit 100000000
-      #         # cd tests
-      #         # ./main.py run gem5/x86-boot-tests
       - run: echo "🍏 This job's status is ${{ job.status }}."
