--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,12 @@ jobs:
         run: |
           scons build/X86/gem5.opt -j $(nproc)
 
+      - name: Step 3 - Use the Upload Artifact GitHub Action
+        uses: actions/upload-artifact@v2
+        with:
+          name: assets-for-download
+          path: build/X86
+
       # double checking that steps are run chronologically
       - name: Run gem5 separately (memory_traffic.py)
         run: |
