--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,5 +1,5 @@
 name: GitHub Actions gem5 Test Run
-run-name: Testing gem5art
+run-name: Artifact testing
 on: [push]
 jobs:
   Explore-GitHub-Actions:
@@ -13,6 +13,15 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - run: mkdir -p hello
+
+      - run: echo hello > hello/world.txt
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: hello-artifact
+          path: hello/world.txt
 
       # - name: Build and run gem5
       #   run: |
@@ -58,13 +67,13 @@ jobs:
       #     python3 -m unittest
       #     mypy -p gem5art.tasks
 
-      - name: Download a single artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: assets-for-download
-      # double checking that steps are run chronologically
-      - name: Run gem5 separately (memory_traffic.py)
-        run: |
-          build/X86/gem5.opt configs/learning_gem5/part1/simple.py
+      # - name: Download a single artifact
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: assets-for-download
+      # # double checking that steps are run chronologically
+      # - name: Run gem5 separately (memory_traffic.py)
+      #   run: |
+      #     build/X86/gem5.opt configs/learning_gem5/part1/simple.py
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
