--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,7 +45,7 @@ jobs:
           # will download all artifacts if not specified
           # and extract them into respective subdirectories
           # https://github.com/actions/download-artifact#download-all-artifacts
-          name: gem5-build
+          name: gem5-artifact
           # Optional, a directory where to extract artifact(s), defaults to the current directory
           # path: extract_here
           # Optional, defaults to current repo
