--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,8 +1,13 @@
 name: GitHub Actions gem5 Test Run
-run-name: Testing nightlies
+run-name: Testing separate jobs in one workflow
 on: [push]
+#  allows us to repeat this daily at 2am
+#  https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
+# on:
+#   schedule:
+#     - cron:  '0 2 * * *'
 jobs:
-  Explore-GitHub-Actions:
+  Test-Upload:
     runs-on: [self-hosted, linux, x64]
     # running container with only a single arguement passes the image being used
     container: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
@@ -67,17 +72,17 @@ jobs:
       #     ls
       #     ls etc/usr/artifacts/
 
-      # - name: Build and run gem5
-      #   run: |
-      #     scons build/X86/gem5.opt -j $(nproc)
+      - name: Build and run gem5
+        run: |
+          scons build/X86/gem5.opt -j $(nproc)
 
       # - name: Tar files to keep permissions intact
       #   run: tar -cvf gem5-artifact.tar build/X86
 
-      # - uses: actions/upload-artifact@v3
-      #   with:
-      #     name: gem5-artifact.tar
-      #     path: build/X86
+      - uses: actions/upload-artifact@v3
+        with:
+          name: gem5-artifact
+          path: build/X86
 
       # # double checking that steps are run chronologically
       # - name: Run gem5 separately (memory_traffic.py)
@@ -85,19 +90,48 @@ jobs:
       #     chmod u+x gem5.opt
       #     ./gem5.opt configs/learning_gem5/part1/simple.py
 
-      - name: test nightly unit test opt
-        run: |
-          scons build/ALL/unittests.opt -j $(nproc) --ignore-style
+      # - name: test nightly unit test opt
+      #   run: |
+      #     scons build/ALL/unittests.opt -j $(nproc) --ignore-style
 
-      - name: nightly unit test debug
-        run: scons build/ALL/unittests.opt -j $(nproc) --ignore-style
+      # - name: nightly unit test debug
+      #   run: scons build/ALL/unittests.opt -j $(nproc) --ignore-style
 
-      - name: nightlies long tests
-        run: |
-          cd tests
-          ./main.py run --length long -j $(nproc) -t8 -vv
+      # - name: nightlies long tests
+      #   run: |
+      #     cd tests
+      #     ./main.py run --length long -j $(nproc) -t8 -vv
 
       # still need to test kvm, gpu tests, and sst
 
+
+      - run: echo "🍏 This job's status is ${{ job.status }}."
+
+  Test-Download:
+    runs-on: [self-hosted, linux, x64]
+    # running container with only a single arguement passes the image being used
+    container: gcr.io/gem5-test/ubuntu-22.04_all-dependencies:latest
+
+    steps:
+    # checks out repository, should be more useful when
+    # running checks on changed files
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: gem5-artifact
+          path: build/X86
+
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: build/X86
+
+      # double checking that steps are run chronologically
+      - name: Run gem5 separately (memory_traffic.py)
+        run: |
+          chmod u+x gem5.opt
+          ./gem5.opt configs/learning_gem5/part1/simple.py
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
